--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -3,7 +3,7 @@ name: Waka Readme
 on:
   schedule:
     # Ejecuta todos los días a las 00:30 UTC (puedes ajustar el horario según prefieras)
-    - cron: '30 0 * * *'
+    - cron: '30 18 * * *'
   workflow_dispatch:
 
 jobs:
@@ -16,3 +16,6 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_LANGUAGE: "True"
+          SHOW_TOTAL_CODE_TIME: "True"
+          SHOW_LINES_OF_CODE: "True"
