--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -21,3 +21,4 @@ jobs:
           SHOW_LINES_OF_CODE: "True"
           SHOW_OS: "False"
           SHOW_PROJECTS: "False"
+          SHOW_LOC_CHART: "False"
